--- a/socialmedia/package.json
+++ b/socialmedia/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://socialmedia-production-a4aa.up.railway.app/api"
+  "proxy": `${process.env.URL}/api`
 }
