--- a/socialmedia/.env
+++ b/socialmedia/.env
@@ -1,2 +1,2 @@
 REACT_APP_PUBLIC_FOLDER = https://socialmedia-production-a4aa.up.railway.app/images/
-URL = https://socialmedia-production-a4aa.up.railway.app
+BASE_URL = https://socialmedia-production-a4aa.up.railway.app
